Fixed problem where invisible flash msg prevents clicking on content in the workspace

--- a/source/css/screen.css
+++ b/source/css/screen.css
@@ -847,6 +847,7 @@ body {
   -ms-border-radius: 6px;
   -o-border-radius: 6px;
   border-radius: 6px;
+  display: none;
   position: absolute;
   box-shadow: 0 0 10px #333;
   opacity: 0;
